# excel-chat-agent

./: .gitignore  CLAUDE.md  static-analysis.datadog.yml
.claude/: settings.local.json
backend/: .env.example  ENHANCED_VECTOR_STORE_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  start_dev.sh
backend/.serena/: project.yml
backend/.serena/memories/: session_context_september_15.md  upload_security_vulnerabilities.md  websocket_optimization_completed.md
backend/app/: __init__.py  main.py  main_enhanced.py
backend/app/api/: enhanced_search.py  websocket_routes.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  enhanced_embedding_strategy.py  enhanced_excel_processor.py  enhanced_llm_service.py  enhanced_vector_store.py  enhanced_vector_store_v2.py  excel_processor.py  llm_service.py  performance_monitor.py  rag_integration_service.py  shared_embedding_service.py  vector_store.py  vector_store_integration.py
backend/app/utils/: error_handling.py
backend/app/websocket/: __init__.py  connection.py  llm_websocket.py
backend/claudedocs/: enhanced_embedding_strategy_analysis.md  implementation_summary.md  migration_checklist.md  refactoring_analysis_report.md
backend/data/excel_files/: Datos Trazabilidad Compras (2025).xlsx
backend/examples/: optimized_processing_example.py
backend/tests/: __init__.py  test_basic_functionality.py  test_enhanced_excel_processor.py  test_enhanced_llm_service.py  test_enhanced_vector_store.py  test_optimized_excel_processor.py  test_unified_excel_processor.py  test_websocket_handlers.py
chroma_db/: chroma.sqlite3
claudedocs/: ddd_system_architecture.md  integration_architecture.md  integration_deployment_guide.md  system_architecture.md  technical_specifications.md
data/excel_files/: empleados_test.xlsx
frontend/: package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatContainer.tsx  ConnectionResilience.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  FileSelector.tsx  MessageInput.tsx  MessageList.tsx  NetworkErrorHandler.tsx  index.ts
frontend/src/context/: ChatContext.tsx  index.ts
frontend/src/hooks/: index.ts  useChat.ts  useReconnection.ts  useWebSocket.ts
frontend/src/types/: chat.types.ts
frontend/src/utils/: message.utils.ts  websocket.utils.ts
