[project]
name = "excel-chat-agent"
version = "0.1.0"
description = "Excel Chat Agent with Ollama and ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pandas>=2.3.2",
    "openpyxl>=3.1.5",
    "chromadb>=1.0.21",
    "sentence-transformers>=5.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.3.0",
    "ollama>=0.5.3",
    "websockets>=15.0.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "numpy>=2.3.3",
    "scipy==1.16.2",
    "python-jose[cryptography]>=3.5.0",
    "python-dotenv>=1.1.0",
    "pyarrow>=21.0.0",
    "psutil>=7.0.0",
    "ruff==0.13.0",
    "black>=25.1.0",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "hatchling>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "black>=25.1.0",
    "ruff>=0.13.0",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "types-openpyxl>=3.1.5.20250822",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
